--- a/nela 2.41.35 PM/style.css
+++ b/nela 2.41.35 PM/style.css
@@ -69,11 +69,11 @@ Text Domain: nela
      background: #ffffff;
      color: #03133a; }
  
- #header > header {
+ header {
    background-image: url(images/home-bg.png);
    text-align: center;
    padding: 20px 0;
-  }
+   padding-bottom: 50px; }
    header .bg-cover {
      background: rgba(0, 0, 0, 0.7); }
    header .input-group input {
@@ -165,174 +165,171 @@ Text Domain: nela
    margin-top: 12px;
    cursor: pointer; }
  
-/* Carousel */
-.owl-carousel, .owl-carousel .owl-item {
-  -webkit-tap-highlight-color: transparent;
-  position: relative; }
-
-.owl-carousel {
-  display: none;
-  width: 100%;
-  z-index: 1; }
-
-.owl-carousel .owl-stage {
-  position: relative;
-  -ms-touch-action: pan-Y;
-  touch-action: manipulation;
-  -moz-backface-visibility: hidden; }
-
-.owl-carousel .owl-stage:after {
-  content: ".";
-  display: block;
-  clear: both;
-  visibility: hidden;
-  line-height: 0;
-  height: 0; }
-
-.owl-carousel .owl-stage-outer {
-  position: relative;
-  overflow: hidden;
-  -webkit-transform: translate3d(0, 0, 0); }
-
-.owl-carousel .owl-item, .owl-carousel .owl-wrapper {
-  -webkit-backface-visibility: hidden;
-  -moz-backface-visibility: hidden;
-  -ms-backface-visibility: hidden;
-  -webkit-transform: translate3d(0, 0, 0);
-  -moz-transform: translate3d(0, 0, 0);
-  -ms-transform: translate3d(0, 0, 0); }
-
-.owl-carousel .owl-item {
-  min-height: 1px;
-  float: left;
-  -webkit-backface-visibility: hidden;
-  -webkit-touch-callout: none; }
-
-.owl-carousel .owl-item img {
-  display: block;
-  width: 100%; }
-
-.owl-carousel .owl-dots.disabled, .owl-carousel .owl-nav.disabled {
-  display: none; }
-
-.no-js .owl-carousel, .owl-carousel.owl-loaded {
-  display: block; }
-
-.owl-carousel .owl-dot, .owl-carousel .owl-nav .owl-next, .owl-carousel .owl-nav .owl-prev {
-  cursor: pointer;
-  -webkit-user-select: none;
-  -khtml-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none; }
-
-.owl-carousel .owl-nav button.owl-next, .owl-carousel .owl-nav button.owl-prev, .owl-carousel button.owl-dot {
-  background: 0 0;
-  color: inherit;
-  border: none;
-  padding: 0 !important;
-  font: inherit; }
-
-.owl-carousel.owl-loading {
-  opacity: 0;
-  display: block; }
-
-.owl-carousel.owl-hidden {
-  opacity: 0; }
-
-.owl-carousel.owl-refresh .owl-item {
-  visibility: hidden; }
-
-.owl-carousel.owl-drag .owl-item {
-  -ms-touch-action: pan-y;
-  touch-action: pan-y;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none; }
-
-.owl-carousel.owl-grab {
-  cursor: move;
-  cursor: grab; }
-
-.owl-carousel.owl-rtl {
-  direction: rtl; }
-
-.owl-carousel.owl-rtl .owl-item {
-  float: right; }
-
-.owl-carousel .animated {
-  animation-duration: 1s;
-  animation-fill-mode: both; }
-
-.owl-carousel .owl-animated-in {
-  z-index: 0; }
-
-.owl-carousel .owl-animated-out {
-  z-index: 1; }
-
-.owl-carousel .fadeOut {
-  animation-name: fadeOut; }
-
-@keyframes fadeOut {
-  0% {
-    opacity: 1; }
-  100% {
-    opacity: 0; } }
-.owl-height {
-  transition: height .5s ease-in-out; }
-
-.owl-carousel .owl-item .owl-lazy {
-  opacity: 0;
-  transition: opacity .4s ease; }
-
-.owl-carousel .owl-item .owl-lazy:not([src]), .owl-carousel .owl-item .owl-lazy[src^=""] {
-  max-height: 0; }
-
-.owl-carousel .owl-item img.owl-lazy {
-  transform-style: preserve-3d; }
-
-.owl-carousel .owl-video-wrapper {
-  position: relative;
-  height: 100%;
-  background: #000; }
-
-.owl-carousel .owl-video-play-icon {
-  position: absolute;
-  height: 80px;
-  width: 80px;
-  left: 50%;
-  top: 50%;
-  margin-left: -40px;
-  margin-top: -40px;
-  background: url(owl.video.play.png) no-repeat;
-  cursor: pointer;
-  z-index: 1;
-  -webkit-backface-visibility: hidden;
-  transition: transform .1s ease; }
-
-.owl-carousel .owl-video-play-icon:hover {
-  -ms-transform: scale(1.3, 1.3);
-  transform: scale(1.3, 1.3); }
-
-.owl-carousel .owl-video-playing .owl-video-play-icon, .owl-carousel .owl-video-playing .owl-video-tn {
-  display: none; }
-
-.owl-carousel .owl-video-tn {
-  opacity: 0;
-  height: 100%;
-  background-position: center center;
-  background-repeat: no-repeat;
-  background-size: contain;
-  transition: opacity .4s ease; }
-
-.owl-carousel .owl-video-frame {
-  position: relative;
-  z-index: 1;
-  height: 100%;
-  width: 100%; }
-/* Carousel */
-
+ .owl-carousel, .owl-carousel .owl-item {
+   -webkit-tap-highlight-color: transparent;
+   position: relative; }
+ 
+ .owl-carousel {
+   display: none;
+   width: 100%;
+   z-index: 1; }
+ 
+ .owl-carousel .owl-stage {
+   position: relative;
+   -ms-touch-action: pan-Y;
+   touch-action: manipulation;
+   -moz-backface-visibility: hidden; }
+ 
+ .owl-carousel .owl-stage:after {
+   content: ".";
+   display: block;
+   clear: both;
+   visibility: hidden;
+   line-height: 0;
+   height: 0; }
+ 
+ .owl-carousel .owl-stage-outer {
+   position: relative;
+   overflow: hidden;
+   -webkit-transform: translate3d(0, 0, 0); }
+ 
+ .owl-carousel .owl-item, .owl-carousel .owl-wrapper {
+   -webkit-backface-visibility: hidden;
+   -moz-backface-visibility: hidden;
+   -ms-backface-visibility: hidden;
+   -webkit-transform: translate3d(0, 0, 0);
+   -moz-transform: translate3d(0, 0, 0);
+   -ms-transform: translate3d(0, 0, 0); }
+ 
+ .owl-carousel .owl-item {
+   min-height: 1px;
+   float: left;
+   -webkit-backface-visibility: hidden;
+   -webkit-touch-callout: none; }
+ 
+ .owl-carousel .owl-item img {
+   display: block;
+   width: 100%; }
+ 
+ .owl-carousel .owl-dots.disabled, .owl-carousel .owl-nav.disabled {
+   display: none; }
+ 
+ .no-js .owl-carousel, .owl-carousel.owl-loaded {
+   display: block; }
+ 
+ .owl-carousel .owl-dot, .owl-carousel .owl-nav .owl-next, .owl-carousel .owl-nav .owl-prev {
+   cursor: pointer;
+   -webkit-user-select: none;
+   -khtml-user-select: none;
+   -moz-user-select: none;
+   -ms-user-select: none;
+   user-select: none; }
+ 
+ .owl-carousel .owl-nav button.owl-next, .owl-carousel .owl-nav button.owl-prev, .owl-carousel button.owl-dot {
+   background: 0 0;
+   color: inherit;
+   border: none;
+   padding: 0 !important;
+   font: inherit; }
+ 
+ .owl-carousel.owl-loading {
+   opacity: 0;
+   display: block; }
+ 
+ .owl-carousel.owl-hidden {
+   opacity: 0; }
+ 
+ .owl-carousel.owl-refresh .owl-item {
+   visibility: hidden; }
+ 
+ .owl-carousel.owl-drag .owl-item {
+   -ms-touch-action: pan-y;
+   touch-action: pan-y;
+   -webkit-user-select: none;
+   -moz-user-select: none;
+   -ms-user-select: none;
+   user-select: none; }
+ 
+ .owl-carousel.owl-grab {
+   cursor: move;
+   cursor: grab; }
+ 
+ .owl-carousel.owl-rtl {
+   direction: rtl; }
+ 
+ .owl-carousel.owl-rtl .owl-item {
+   float: right; }
+ 
+ .owl-carousel .animated {
+   animation-duration: 1s;
+   animation-fill-mode: both; }
+ 
+ .owl-carousel .owl-animated-in {
+   z-index: 0; }
+ 
+ .owl-carousel .owl-animated-out {
+   z-index: 1; }
+ 
+ .owl-carousel .fadeOut {
+   animation-name: fadeOut; }
+ 
+ @keyframes fadeOut {
+   0% {
+     opacity: 1; }
+   100% {
+     opacity: 0; } }
+ .owl-height {
+   transition: height .5s ease-in-out; }
+ 
+ .owl-carousel .owl-item .owl-lazy {
+   opacity: 0;
+   transition: opacity .4s ease; }
+ 
+ .owl-carousel .owl-item .owl-lazy:not([src]), .owl-carousel .owl-item .owl-lazy[src^=""] {
+   max-height: 0; }
+ 
+ .owl-carousel .owl-item img.owl-lazy {
+   transform-style: preserve-3d; }
+ 
+ .owl-carousel .owl-video-wrapper {
+   position: relative;
+   height: 100%;
+   background: #000; }
+ 
+ .owl-carousel .owl-video-play-icon {
+   position: absolute;
+   height: 80px;
+   width: 80px;
+   left: 50%;
+   top: 50%;
+   margin-left: -40px;
+   margin-top: -40px;
+   background: url(owl.video.play.png) no-repeat;
+   cursor: pointer;
+   z-index: 1;
+   -webkit-backface-visibility: hidden;
+   transition: transform .1s ease; }
+ 
+ .owl-carousel .owl-video-play-icon:hover {
+   -ms-transform: scale(1.3, 1.3);
+   transform: scale(1.3, 1.3); }
+ 
+ .owl-carousel .owl-video-playing .owl-video-play-icon, .owl-carousel .owl-video-playing .owl-video-tn {
+   display: none; }
+ 
+ .owl-carousel .owl-video-tn {
+   opacity: 0;
+   height: 100%;
+   background-position: center center;
+   background-repeat: no-repeat;
+   background-size: contain;
+   transition: opacity .4s ease; }
+ 
+ .owl-carousel .owl-video-frame {
+   position: relative;
+   z-index: 1;
+   height: 100%;
+   width: 100%; }
  
  .video-player {
    padding: 40px 0; }
@@ -835,23 +832,9 @@ Text Domain: nela
   justify-content: space-evenly;
 }
 
-#main,
-#index_main_wrapper,
-.header-content-wrapper {
-  max-width: 1200px !important;
-  margin: 0 auto 0 auto !important;
-}
-
-.header-menu-custom-wrapper {
-  max-width: 1220px !important;
-  margin: 0 auto 0 auto !important;
-}
-#primary{
-  margin-top: 20px;
-}
-#primary #main {
-  padding-left: 40px;
-  padding-right: 40px;
+#index_main_wrapper {
+  max-width: 1200px;
+  margin: 0 auto 0 auto;
 }
 
 #index_main_wrapper .cards p,#index_main_wrapper .cards h2, #index_main_wrapper .cards a{
@@ -861,53 +844,13 @@ Text Domain: nela
 .woocommerce .col2-set .col-1, .woocommerce-page .col2-set .col-1{
   max-width: none !important;
 }
-#main-logo-title {
-  text-decoration: none;
-}
-#header> header > .row {
-  background: #0000004d;
-  /* background: linear-gradient(90deg, rgba(8,71,139,1) 0%, rgba(1,34,89,1) 35%, rgba(86,108,112,1) 100%); */
-}
-#header .cards{
-  display: flex;
-  height: 100%;
-}
-
-#header .big-card{
-  height: 350px;
-}
-
-#header .big-card a,
-#header .big-card h2,
-#header .big-card h3,
-#header .big-card p,
-#header .small-card a,
-#header .small-card h5 { 
-  color: #fff;
-  text-shadow: 2px 2px #023977;
-}
-#header .small-card{
-  height: 195px;
-  
-}
-#header .big-card,
-#header .small-card {
-  background-repeat: no-repeat;
-  background-position: center;
-  transition: transform .3s;
-  background-size: cover;
-}
-#header .big-card:hover,
-#header .small-card:hover {
-  transform: scale(1.5);
-}
-
-.card-wrapper {
-  overflow: hidden;
-}
 /* EDITS */
 
 
+#main {
+  max-width: 1200px;
+    margin: auto;
+}
 
  
  @media (max-width: 767px) {
